--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: Prácticas Sistemas Ciberfísicos
+title: Sistemas Ciberfísicos
 description: Repositorio del equipo 2 para subir todas las prácticas de la primavera de 2026 
 
 # GitHub Pages: modo recomendado
